crates/credential/tests/probes/test_result_free_form_reason.stderr
error[E0559]: variant `TestResult::Failed` has no field named `reason`
 --> tests/probes/test_result_free_form_reason.rs:8:9
  |
8 |         reason: provider_reason,
  |         ^^^^^^ `TestResult::Failed` does not have this field
  |
  = note: available fields are: `code`
